<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MibewMob</string>
    <string name="action_settings">Settings</string>
    <string name="title_chat_history">Chat history</string>
    <string name="title_chat_servers">Monitored Sites</string>
    <string name="title_user_identities">Identities</string>
    <string name="title_activity_server_details">ServerDetailsActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="chatServerLabel">Enter the URL of your Mibew chat server</string>
    <string name="sampleChatServerURL">http://www.example.com/mibew</string>
    <string name="validate">Validate</string>
    <string name="no_server">There are currently no live chat servers that are being monitored. Use the button below to add a new server</string>
    <string name="new_server">New Server</string>
    <string name="sample_url">http://www.example.com/webim</string>
    <string name="sample_server_name">Example.com</string>
    <string name="logo_description">Chat server logo</string>
    <string name="confirm_details">Confirm that the details below are correct</string>
    <string name="confirm">Confirm</string>
    <string name="back">Back</string>
    <string name="change">Change</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="chatServerLoginLabel">Enter the details to login to your Mibew chat server</string>
    <string name="login">Log In</string>
    <string name="server_info">Server Info</string>
    <string name="operator_info">Operator Info</string>
    <string name="chat_service_label">Mibew Mobile Chat Service</string>
    <string name="chat_service_started">Chat service started</string>
    <string name="chat_service_stopped">Chat service stopped</string>
    <string name="guest_name">Guest Name</string>
    <string name="intitial_message">Initial inquiry from guest</string>
    <string name="no_visitors">There are currently no visitors on the sites being monitored</string>
    <string name="title_activity_chatting">Chatting</string>
    <string name="hello_bubbles">Hello bubbles!</string>
    <string name="action_initiate_chat">Start Chat</string>
    <string name="sendnow">Send Now</string>
    <string name="action_close_chat">Close chat</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="unhandled_exception">An unknown error has occurred. The error has been logged.</string>
    <string name="title_activity_crash">CrashActivity</string>
    <string name="gcm_intent_service">Google Cloud Messaging Intent Service</string>

</resources>
