<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/server_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:text="@string/sample_server_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/server_url"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample_url"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <ImageView
        android:id="@+id/server_logo"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginLeft="3dp"
        android:contentDescription="@string/logo_description"
        android:scaleType="fitStart"
        android:src="@drawable/ic_launcher" />

</LinearLayout>
