<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/confirm_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:text="@string/confirm_details"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/server_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_info"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="#000000"
	    android:layout_marginBottom="5dp" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal" >

	    <LinearLayout
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/server_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="3dp"
	            android:layout_marginTop="3dp"
	            android:text="@string/sample_server_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/server_url"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sample_url"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    </LinearLayout>
	    <ImageView
	        android:id="@+id/server_logo"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="3dp"
	        android:contentDescription="@string/logo_description"
	        android:scaleType="fitStart"
	        android:src="@drawable/ic_launcher" />
	</LinearLayout>

    <TextView
        android:id="@+id/operator_details_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operator_info"
        android:textAllCaps="true"
        android:textAppearance="?android:attr/textAppearanceSmall" />
	<View 
	    android:layout_width="match_parent"
	    android:layout_height="2dp"
	    android:background="#000000"
	    android:layout_marginBottom="5dp" />
	
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <LinearLayout
	        android:layout_width="250dp"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/operator_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="3dp"
	            android:layout_marginTop="3dp"
	            android:text="@string/sample_server_name"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	
	        <TextView
	            android:id="@+id/operator_email"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/sample_url"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	    </LinearLayout>
	    <ImageView
	        android:id="@+id/operator_avator"
	        android:layout_width="60dp"
	        android:layout_height="60dp"
	        android:layout_marginLeft="3dp"
	        android:contentDescription="@string/logo_description"
	        android:scaleType="fitStart"
	        android:src="@drawable/ic_launcher" />
	</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/confirm_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm" />

    </LinearLayout>
    
</LinearLayout>
