<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!-- Login progress -->

    <LinearLayout
        android:id="@+id/login_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp" />

        <TextView
            android:id="@+id/login_status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/login_progress_signing_in"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    
    <!-- Login form -->

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    	<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingBottom="@dimen/activity_vertical_margin"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
		    android:paddingRight="@dimen/activity_horizontal_margin"
		    android:paddingTop="@dimen/activity_vertical_margin"
		    android:orientation="vertical" >
		    
		    <TextView
		        android:id="@+id/chatServerLabel"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:text="@string/chatServerLoginLabel"
		        android:textAppearance="?android:attr/textAppearanceMedium" />
		
		    <EditText
		        android:id="@+id/chatServerURL"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp"
		        android:ems="10"
		        android:hint="@string/sampleChatServerURL"
		        android:inputType="textUri" />
		
		     <EditText
		        android:id="@+id/username"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/prompt_username"
		        android:maxLines="1"
		        android:singleLine="true" />
		
		    <EditText
		        android:id="@+id/password"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/prompt_password"
		        android:imeActionId="@+id/login"
		        android:imeActionLabel="@string/action_sign_in_short"
		        android:imeOptions="actionUnspecified"
		        android:inputType="textPassword"
		        android:maxLines="1"
		        android:singleLine="true" />
		
		     <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="20dp" >
		
		        <Button
		            android:id="@+id/serverValidate"
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/login" />
		
		    </LinearLayout>
		    
		</LinearLayout>
	</ScrollView>
</LinearLayout>
